--- a/lang/cn.json
+++ b/lang/cn.json
@@ -1689,7 +1689,7 @@
 	"D35E.ConvertToLoot": "转变为战利品(棋子)",
 	"D35E.CustomTreasureGenerator": "生成自定义宝藏 (棋子)",
 	"D35E.EncounterGenerator": "生成遭遇",
-	"D35E.EntrySelector": "加入选择",
+	"D35E.EntrySelector": "添加规格",
 	"D35E.True": "启用",
     "D35E.False": "停用",
 	"D35E.Feat": "专长",
